src/main/metadata/objects/Test_Step_Result__c.object
<CustomObject>
    <description>PMO: Test Management. Store all test Result that based on Test Steps.</description>
    <fields>
        <fullName>Actual_Result__c</fullName>
        <label>Actual Result</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <label>Expected Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Navigation_Path__c</fullName>
        <label>Navigation Path</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Step_Description__c</fullName>
        <label>Step Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Result__c</fullName>
        <label>Test Result</label>
        <referenceTo>Test_Result__c</referenceTo>
        <relationshipName>Test_Step_Runs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Test_Step__c</fullName>
        <label>Test Step</label>
        <referenceTo>Test_Step__c</referenceTo>
        <relationshipName>Test_Step_Runs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Test Step Result</label>
    <nameField>
        <displayFormat>TSR-{000000}</displayFormat>
        <label>Test Step Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Step Result</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>